[package]
name = "soi"
version = "0.1.0"
authors = ["nilisnone <varobj@varobj.com>"]
edition = "2021"

[profile.dev]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
lazy_static = "1.4"
yaml-rust = "0.4"
file = "1.1"
serde = "1.0.190"
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"
